# esame-lab2

./: CMakeLists.txt  README  README.md  adapt-to-older-boost.sh  box.cpp  box.h  esame-lab2.kdev4  generator.cpp  generator.h  main.cpp  obstacle.cpp  obstacle.h  particle.cpp  particle.h  program.py  python.cpp  sensor.cpp  sensor.h  sphere.cpp  sphere.h  universe.cpp  universe.h  universebatch.cpp  universebatch.h  vector.cpp  vector.h
src/: box.cpp  generator.h  python.cpp  sensor.h  sphere.cpp  sphere.h  universe.cpp  universe.h  universebatch.cpp  vector.cpp  vector.h
